<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.splashscreen.OnBoardFragment3">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="0sp"
        android:layout_height="45sp"
        android:layout_marginStart="55sp"
        android:layout_marginEnd="55sp"
        android:layout_marginBottom="25sp"
        android:background="@drawable/button_bg"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35sp"
        android:elevation="1dp"
        android:padding="10sp"
        android:src="@drawable/img_onboarding3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView

        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:src="@drawable/img_onboarding_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55sp"
        android:layout_marginEnd="55sp"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/popins_bold"
        android:gravity="center_horizontal"
        android:text="@string/onBoard3Title"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/popins_medium"
        android:gravity="center"
        android:text="@string/onBoard3Description"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginTop="25sp"
        android:layout_marginStart="55sp"
        android:layout_marginEnd="55sp"
        android:layout_marginBottom="25sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
       />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="120sp"
        android:layout_height="0sp"
        android:layout_marginBottom="25sp"
        android:src="@drawable/group3"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6"/>
</androidx.constraintlayout.widget.ConstraintLayout>